editors/tree-sitter-lisette/grammar.js
    source_file: $ => seq(optional($.shebang), repeat($._statement)),

    _statement: $ => choice(
      $.expression_statement,
      $._declaration_statement,
    ),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    expression_statement: $ => choice(
      seq($._expression, $._semicolon),
      prec(1, $._expression_ending_with_block),
    ),

    function_item: $ => seq(
      optional($.visibility_modifier),
      'fn',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    parameters: $ => parenList(seq(
      optional($.attribute_item),
      choice(
        $.parameter,
        $.self_parameter,
        '_',
      ),
    )),

    parameter_types: $ => parenList(choice($._type, '_')),

    parameter: $ => seq(
      field('pattern', choice(
        $._pattern,
        'self',
      )),
      ':',
      field('type', $._type),
    ),

    mutable_specifier: _ => 'mut',

    // Type parameters

    _type: $ => choice(
      $.writable_type,
      $.generic_type,
      $.scoped_type_identifier,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      $._type_identifier,
      $.never_type,
    ),

    generic_type: $ => prec(1, seq(
      field('type', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      field('type_arguments', $.type_arguments),
    )),

    scoped_type_identifier: $ => prec.left(seq(
      field('path', choice(
        $._type_identifier,
        $.scoped_type_identifier,
        $.generic_type,
      )),
      '.',
      field('name', $._type_identifier),
    )),

    type_arguments: $ => prec(-1, seq(
      '<',
      sepBy1(',', choice(
        $._type,
        $._literal,
      )),
      optional(','),
      '>',
    )),

    function_type: $ => seq(
      'fn',
      field('parameters', $.parameter_types),
      optional(seq('->', field('return_type', $._type))),
    ),

    _expression_except_range: $ => choice(
      $.unary_expression,
      $.reference_expression,
      $.try_expression,
      $.binary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.type_cast_expression,
      $.call_expression,
      $.generic_call_expression,
      $.return_expression,
      $._literal,
      prec.left($.identifier),
      $.self,
      $.field_expression,
      $.slice_expression,
      $.tuple_expression,
      $.unit_expression,
      $.break_expression,
      $.continue_expression,
      $.index_expression,
      $.closure_expression,
      $.parenthesized_expression,
      $.struct_expression,
      $.deref_expression,
      $.rawgo_directive,
      $._expression_ending_with_block,
    ),

    _expression: $ => choice(
      $._expression_except_range,
      $.range_expression,
    ),

    _expression_ending_with_block: $ => choice(
      $.block,
      $.if_expression,
      $.if_let_expression,
      $.match_expression,
      $.while_expression,
      $.while_let_expression,
      $.loop_expression,
      $.for_expression,
      $.select_expression,
      $.try_block,
      $.recover_block,
    ),

    // Binary / unary / postfix expressions

    range_expression: $ => prec.left(PREC.range, choice(
      seq($._expression, choice('..', '..='), $._expression),
      seq($._expression, '..'),
      seq('..', $._expression),
      seq('..=', $._expression),
      '..',
    )),

    unary_expression: $ => prec(PREC.unary, seq(
      choice('-', '^', alias($._bang, '!')),
      $._expression,
    )),

    reference_expression: $ => prec(PREC.unary, seq(
      '&',
      field('value', $._expression),
    )),

    try_expression: $ => prec(PREC.try, seq(
      $._expression,
      '?',
    )),

    deref_expression: $ => prec(PREC.field, seq(
      field('value', $._expression),
      '.',
      '*',
    )),

    binary_expression: $ => {
      const table = [
        [PREC.pipeline, '|>'],
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.comparative, choice('==', '!=', '<=', '>=')],
        [PREC.additive, choice('+', '-', '|', '^')],
        [PREC.multiplicative, choice('*', '/', '%', '<<', '>>', '&', '&^')],
      ];

      return choice(
        // @ts-ignore
        ...table.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '<'),
          field('right', $._expression),
        )),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '>'),
          field('right', $._expression),
        )),
      );
    },

    assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      '=',
      field('right', $._expression),
    )),

    compound_assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      field('operator', choice('+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '&^=', '<<=', '>>=')),
      field('right', $._expression),
    )),

    type_cast_expression: $ => prec.left(PREC.cast, seq(
      field('value', $._expression),
      'as',
      field('type', $._type),
    )),

    return_expression: $ => choice(
      prec.left(seq('return', $._expression)),
      prec(-1, 'return'),
    ),

    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression_except_range),
      field('arguments', $.arguments),
    )),

    generic_call_expression: $ => prec(PREC.call, seq(
      field('function', choice(
        $.identifier,
        $.field_expression,
      )),
      field('type_arguments', $.call_type_arguments),
      field('arguments', $.arguments),
    )),

    call_type_arguments: $ => seq(
      $._open_angle,
      sepBy1(',', choice($._type, $._literal)),
      optional(','),
      '>',
    ),

    arguments: $ => parenList(choice($._expression, $.spread_argument)),

    spread_argument: $ => prec(PREC.try, seq($._expression, '...')),

    slice_expression: $ => seq('[', commaSep($._expression), ']'),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    tuple_expression: $ => seq(
      '(',
      seq($._expression, ','),
      repeat(seq($._expression, ',')),
      optional($._expression),
      ')',
    ),

    unit_expression: _ => seq('(', ')'),

    struct_expression: $ => seq(
      field('name', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      field('body', $.field_initializer_list),
    ),

    field_initializer_list: $ => bracedList(choice(
      $.shorthand_field_initializer,
      $.field_initializer,
      $.base_field_initializer,
      $.zero_fill_initializer,
    )),

    field_initializer: $ => seq(
      field('field', choice($._field_identifier, $.integer_literal)),
      ':',
      field('value', $._expression),
    ),

    base_field_initializer: $ => seq(
      '..',
      $._expression,
    ),

    zero_fill_initializer: _ => prec(1, '..'),

    // Control flow

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      field('body', $.match_block),
    ),

    match_block: $ => seq(
      '{',
      optional(seq(
        repeat($.match_arm),
        alias($.last_match_arm, $.match_arm),
      )),
      '}',
    ),

    match_arm: $ => prec.right(seq(
      field('pattern', $.match_pattern),
      '=>',
      choice(
        seq(field('value', $._expression), ','),
        field('value', prec(1, $._expression_ending_with_block)),
      ),
    )),

    match_pattern: $ => seq(
      $._pattern,
      optional(seq('if', field('condition', $._expression))),
    ),

    loop_expression: $ => seq(
      'loop',
      field('body', $.block),
    ),

    break_expression: $ => prec.left(seq('break', optional($._expression))),

    closure_expression: $ => prec(PREC.closure, seq(
      field('parameters', $.closure_parameters),
      choice(
        seq(
          optional(seq('->', field('return_type', $._type))),
          field('body', $.block),
        ),
        field('body', $._expression),
      ),
    )),

    closure_parameters: $ => seq(
      '|',
      sepBy(',', choice(
        $._pattern,
        $.parameter,
      )),
      '|',
    ),

    // Field / index access

    index_expression: $ => prec(PREC.call, seq(
      $._expression,
      '[',
      $._expression,
      ']',
    )),

    field_expression: $ => prec(PREC.field, seq(
      field('value', $._expression),
      '.',
      field('field', choice(
        $._field_identifier,
        $.integer_literal,
      )),
    )),

    // Blocks

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    // Let / var

    let_declaration: $ => seq(
      'let',
      optional('assert'),
      optional($.mutable_specifier),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(seq(
        'else',
        field('alternative', $.block),
      )),
      $._semicolon,
    ),

    // Directives

    rawgo_directive: $ => seq(
      '@rawgo',
      '(',
      $.string_literal,
      ')',
    ),

    // Patterns

    _pattern: $ => choice(
      $._literal_pattern,
      $.identifier,
      $.scoped_type_identifier,
      $.tuple_pattern,
      $.tuple_struct_pattern,
      $.struct_pattern,
      $.slice_pattern,
      $.or_pattern,
      $.as_binding_pattern,
      $.remaining_field_pattern,
      '_',
    ),

    as_binding_pattern: $ => prec.left(seq(
      field('pattern', $._pattern),
      'as',
      field('name', $.identifier),
    )),

    tuple_pattern: $ => parenList(choice($._pattern, $.closure_expression)),

    slice_pattern: $ => seq('[', commaSep($._pattern), ']'),

    tuple_struct_pattern: $ => seq(
      field('type', choice(
        $.identifier,
        $.scoped_type_identifier,
      )),
      parenList($._pattern),
    ),

    struct_pattern: $ => seq(
      field('type', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      bracedList(choice($.field_pattern, $.remaining_field_pattern)),
    ),

    field_pattern: $ => choice(
      field('name', alias($.identifier, $.shorthand_field_identifier)),
      seq(
        field('name', $._field_identifier),
        ':',
        field('pattern', $._pattern),
      ),
    ),

    remaining_field_pattern: $ => seq(
      '..',
      optional($.identifier),
    ),

    or_pattern: $ => prec.left(-2, seq(
      $._pattern,
      '|',
      $._pattern,
    )),

    // Literals

    _literal: $ => choice(
      $.string_literal,
      $.raw_string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.float_literal,
      $.imaginary_literal,
      $.format_string,
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
    )),

    imaginary_literal: $ => seq(
      choice($.integer_literal, $.float_literal),
      token.immediate('i'),
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_content,
      )),
      token.immediate('"'),
    ),

    format_string: $ => seq(
      'f"',
      repeat(choice(
        $._format_string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      token.immediate('"'),
    ),

    interpolation: $ => seq(
      alias($._interpolation_open, '{'),
      $._expression,
      '}',
    ),

    char_literal: _ => token(seq(
      '\'',
      optional(choice(
        seq('\\', ESCAPE_SEQ),
        /[^\\']/,
      )),
      '\'',
    )),

    escape_sequence: _ => token.immediate(seq('\\', ESCAPE_SEQ)),

    boolean_literal: _ => choice('true', 'false'),

    // Comments

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
  },
});
