editors/tree-sitter-lisette/test/corpus/expressions.txt
================================================================================
Binary arithmetic
================================================================================

let x = a + b * c

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (binary_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Comparison
================================================================================

let x = a < b

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Logical
================================================================================

let x = a && b || c

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (identifier))
      right: (identifier))))

================================================================================
Unary negation
================================================================================

let x = -y

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (unary_expression
      (identifier))))

================================================================================
Unary not
================================================================================

let x = !flag

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (unary_expression
      (identifier))))

================================================================================
Unary not with not-equal
================================================================================

let x = !a != b

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (unary_expression
        (identifier))
      right: (identifier))))

================================================================================
Reference
================================================================================

let x = &y

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (reference_expression
      value: (identifier))))

================================================================================
Deref
================================================================================

let x = r.*

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (deref_expression
      value: (identifier))))

================================================================================
Bitwise operators
================================================================================

let x = (a | b) ^ c &^ d

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (parenthesized_expression
        (binary_expression
          left: (identifier)
          right: (identifier)))
      right: (binary_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Shift operators
================================================================================

let x = a << 2 >> 1

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (integer_literal))
      right: (integer_literal))))

================================================================================
Unary bitwise not
================================================================================

let x = ^y

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (unary_expression
      (identifier))))

================================================================================
Field access
================================================================================

let x = obj.field

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (field_expression
      value: (identifier)
      field: (field_identifier))))

================================================================================
Index
================================================================================

let x = items[0]

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (index_expression
      (identifier)
      (integer_literal))))

================================================================================
Compound bitwise assignment
================================================================================

x &= 1

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (compound_assignment_expression
      left: (identifier)
      right: (integer_literal))))

================================================================================
Compound shift assignment
================================================================================

x <<= 2

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (compound_assignment_expression
      left: (identifier)
      right: (integer_literal))))

================================================================================
Call
================================================================================

let x = foo(1, 2)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (call_expression
      function: (identifier)
      arguments: (arguments
        (integer_literal)
        (integer_literal)))))

================================================================================
Nested generic call with >> close
================================================================================

identity<Map<string, Vec<int>>>(42)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (generic_call_expression
      function: (identifier)
      type_arguments: (call_type_arguments
        (generic_type
          type: (type_identifier)
          type_arguments: (type_arguments
            (type_identifier)
            (generic_type
              type: (type_identifier)
              type_arguments: (type_arguments
                (type_identifier))))))
      arguments: (arguments
        (integer_literal)))))

================================================================================
Call with postfix spread
================================================================================

foo(xs...)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (arguments
        (spread_argument
          (identifier))))))

================================================================================
Call with leading args and postfix spread
================================================================================

foo(a, b, xs...)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (arguments
        (identifier)
        (identifier)
        (spread_argument
          (identifier))))))

================================================================================
Generic call
================================================================================

identity<int>(42)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (generic_call_expression
      function: (identifier)
      type_arguments: (call_type_arguments
        (type_identifier))
      arguments: (arguments
        (integer_literal)))))

================================================================================
Method call
================================================================================

let x = obj.method()

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (call_expression
      function: (field_expression
        value: (identifier)
        field: (field_identifier))
      arguments: (arguments))))

================================================================================
Pipeline
================================================================================

let x = a |> b |> c

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (identifier))
      right: (identifier))))

================================================================================
Range
================================================================================

let x = 0..10

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (range_expression
      (integer_literal)
      (integer_literal))))

================================================================================
Inclusive range
================================================================================

let x = 0..=10

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (range_expression
      (integer_literal)
      (integer_literal))))

================================================================================
Open range
================================================================================

let x = start..

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (range_expression
      (identifier))))

================================================================================
Type cast
================================================================================

let x = y as float64

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (type_cast_expression
      value: (identifier)
      type: (type_identifier))))

================================================================================
Try postfix
================================================================================

let x = read()?

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (try_expression
      (call_expression
        function: (identifier)
        arguments: (arguments)))))

================================================================================
Assignment
================================================================================

x = 42

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (integer_literal))))

================================================================================
Compound assignment
================================================================================

x += 1

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (compound_assignment_expression
      left: (identifier)
      right: (integer_literal))))

================================================================================
Struct expression
================================================================================

let p = Point { x: 1, y: 2 }

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (struct_expression
      name: (type_identifier)
      body: (field_initializer_list
        (field_initializer
          field: (field_identifier)
          value: (integer_literal))
        (field_initializer
          field: (field_identifier)
          value: (integer_literal))))))

================================================================================
Struct expression with zero-fill spread
================================================================================

let p = Point { x: 1, .. }

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (struct_expression
      name: (type_identifier)
      body: (field_initializer_list
        (field_initializer
          field: (field_identifier)
          value: (integer_literal))
        (zero_fill_initializer)))))

================================================================================
Struct expression zero-fill only
================================================================================

let p = Point { .. }

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (struct_expression
      name: (type_identifier)
      body: (field_initializer_list
        (zero_fill_initializer)))))

================================================================================
Struct expression with base spread
================================================================================

let p = Point { x: 1, ..base }

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (struct_expression
      name: (type_identifier)
      body: (field_initializer_list
        (field_initializer
          field: (field_identifier)
          value: (integer_literal))
        (base_field_initializer
          (identifier))))))

================================================================================
Closure
================================================================================

let f = |x: int| x * 2

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (closure_expression
      parameters: (closure_parameters
        (parameter
          pattern: (identifier)
          type: (type_identifier)))
      body: (binary_expression
        left: (identifier)
        right: (integer_literal)))))

================================================================================
Empty closure
================================================================================

let f = || 0

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (closure_expression
      parameters: (closure_parameters)
      body: (integer_literal))))

================================================================================
Tuple
================================================================================

let t = (1, 2, 3)

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (tuple_expression
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Unit
================================================================================

let u = ()

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (unit_expression)))

================================================================================
Parenthesized
================================================================================

let x = (a + b) * c

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (binary_expression
      left: (parenthesized_expression
        (binary_expression
          left: (identifier)
          right: (identifier)))
      right: (identifier))))

================================================================================
Slice literal
================================================================================

let s = [1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (slice_expression
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Break with value
================================================================================

loop { break 42 }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (loop_expression
      body: (block
        (break_expression
          (integer_literal))))))

================================================================================
Return
================================================================================

fn f() -> int { return 42 }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (type_identifier)
    body: (block
      (return_expression
        (integer_literal)))))

================================================================================
Rawgo
================================================================================

@rawgo("fmt.Println()")

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (rawgo_directive
      (string_literal
        (string_content)))))

================================================================================
Generic call with function type argument
================================================================================

fn main() {
  let m = Map.new<string, fn(int, int) -> int>()
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters)
    (block
      (let_declaration
        (identifier)
        (generic_call_expression
          (field_expression
            (identifier)
            (field_identifier))
          (call_type_arguments
            (type_identifier)
            (function_type
              (parameter_types
                (type_identifier)
                (type_identifier))
              (type_identifier)))
          (arguments))))))

================================================================================
Closure with return type at statement start
================================================================================

fn make() -> fn() -> int {
  let mut n = 0
  || -> int { n }
}

--------------------------------------------------------------------------------

(source_file
  (function_item
    (identifier)
    (parameters)
    (function_type
      (parameter_types)
      (type_identifier))
    (block
      (let_declaration
        (mutable_specifier)
        (identifier)
        (integer_literal))
      (expression_statement
        (closure_expression
          (closure_parameters)
          (type_identifier)
          (block
            (identifier)))))))
